[package]
name = "libu"
version = "1.0.0"
edition = "2024"
authors = ["RunThem <iccy.fun@outlook.com>"]
license = "MIT"
description = "Utils library."
repository = "https://github.com/RunThem/libu.rs"

[workspace]
members = ["libu-derive", "libu-point", "libu-timer", "libu-chan", "libu-log"]
resolver = "2"

[dependencies]
libu-chan = { path = "libu-chan" }
libu-point = { path = "libu-point" }
libu-derive = { path = "libu-derive" }
libu-timer = { path = "libu-timer" }
libu-log = { path = "libu-log" }

extend = "1.2.0"
