[package]
name = "libu"
version = "1.0.0"
edition = "2024"
authors = ["RunThem <iccy.fun@outlook.com>"]
license = "MIT"
description = "Utils library."
repository = "https://github.com/RunThem/libu.rs"

[workspace]
members = [
    "libu-derive",
    "libu-point",
    "libu-timer",
    "libu-chan",
    "libu-log",
    "libu-macro",
    "libu-trait"
]
resolver = "2"

[dependencies.libu-chan]
path = "libu-chan"

[dependencies.libu-point]
path = "libu-point"

[dependencies.libu-derive]
path = "libu-derive"

[dependencies.libu-timer]
path = "libu-timer"

[dependencies.libu-log]
path = "libu-log"

[dependencies.libu-trait]
path = "libu-trait"

[dependencies.libu-macro]
path = "libu-macro"
